/*
 * Copyright 2018-2020 Radicalbit S.r.l.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package io.radicalbit.nsdb.rpc;
import "security.proto";

message InitMetricRequest {
  string db = 1 [(AuthorizationField) = DB];
  string namespace = 2 [(AuthorizationField) = NAMESPACE];
  string metric = 3 [(AuthorizationField) = METRIC];
  string shardInterval = 4;
  string retention = 5;
}

message InitMetricResponse {
  string db = 1 [(AuthorizationField) = DB];
  string namespace = 2 [(AuthorizationField) = NAMESPACE];
  string metric = 3 [(AuthorizationField) = METRIC];
  bool completedSuccessfully = 4;
  string errorMsg = 5;
}

service InitMetric {
  option (isAuthorized) = true;
  rpc InitMetric(InitMetricRequest) returns (InitMetricResponse);
}

