/*
 * Copyright 2018-2020 Radicalbit S.r.l.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package io.radicalbit.nsdb.rpc;

message MetricsGot{
    string db = 1;
    string namespace = 2;
    repeated string metrics = 3;
    bool completedSuccessfully = 4;
    string errors = 5;
}

message DescribeMetricResponse{
    message MetricField{
        string name = 1;
        enum FieldClassType {
            TIMESTAMP = 0;
            VALUE = 1;
            DIMENSION = 2;
            TAG = 3;
        }
        FieldClassType fieldClassType = 2;
        string indexType = 3;
    }
    message MetricInfo{
     int64 shardInterval = 1;
     int64 retention = 2;
    }
    string db = 1;
    string namespace = 2;
    string metric = 3;
    repeated MetricField fields = 4;
    MetricInfo metricInfo = 5;
    bool completedSuccessfully = 6;
    string errors = 7;
}

message Namespaces{
    string db = 1;
    repeated string namespaces = 2;
    bool completedSuccessfully = 3;
    string errors = 4;
}
